--- a/home.css
+++ b/home.css
@@ -15,7 +15,7 @@ body {
 #middle{
   margin-top: 19px;
   width: 100%;
-  height: 428px;
+  height: 403px;
   box-shadow: 7px 10px 20px 6px rgb(196 197 197), -5px -7px 15px 2px white;
   border-radius: 8px;
   overflow-x: hidden;
@@ -26,7 +26,7 @@ body {
 #right{
   margin-top: 50px;
   width: 100%;
-  height: 110px;
+  height: 137px;
   box-shadow: 7px 10px 20px 6px rgb(196, 197, 197), -2px -2px 15px 2px white;
   border-radius: 8px;
 }
@@ -58,4 +58,19 @@ body {
 
 form{
   padding-top: 40px;
+}
+
+
+
+#song-detail{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-top: 20px;
+
+}
+
+#thumbnail{
+  height: 101px;
+  width: 101px;
 }
